tests/reference/ast_new-import1-f643fd3.stderr
tokenizer error: Token '\' is not recognized
 --> tests/parser/import1.py:9:49
  |
9 | from ltypes import i8, i16, i32, i64, f32, f64, \
  |                                                 ^ token not recognized
